Linq performance testing.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ StringEquals/obj/
 TestingPrograms/bin/
 TestingPrograms/obj/
 TestingPrograms.sln.DotSettings.user
+LinqNetCore7/bin/
+LinqNetCore7/obj/
