--- a/TestingPrograms/TestingPrograms.csproj
+++ b/TestingPrograms/TestingPrograms.csproj
@@ -14,9 +14,12 @@
 
   <ItemGroup>
 	<PackageReference Include="AutoFixture" Version="4.17.0" />
+	<PackageReference Include="AutoFixture.AutoMoq" Version="4.17.0" />
+	<PackageReference Include="AutoFixture.NUnit3" Version="4.17.0" />
 	<PackageReference Include="AutoFixture.SeedExtensions" Version="4.17.0" />
 	<PackageReference Include="FluentAssertions" Version="6.7.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+    <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
     <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
