--- a/LinqNetCore7/LinqNetCore7.csproj
+++ b/LinqNetCore7/LinqNetCore7.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net6.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net6.0;net7.0</TargetFrameworks>
     <ImplicitUsings>0</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
