--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ AutoFixture.Tests/bin/
 AutoFixture.Tests/obj/
 Dotnet7Example/bin/
 Dotnet7Example/obj/
+MyBenchmarks/bin/
+MyBenchmarks/obj/
+MyCore/bin/
+MyCore/obj/
