--- a/TestingPrograms/TestingPrograms.csproj
+++ b/TestingPrograms/TestingPrograms.csproj
@@ -13,11 +13,11 @@
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="AutoFixture" Version="4.17.0" />
-	<PackageReference Include="AutoFixture.AutoMoq" Version="4.17.0" />
-	<PackageReference Include="AutoFixture.NUnit3" Version="4.17.0" />
-	<PackageReference Include="AutoFixture.SeedExtensions" Version="4.17.0" />
-	<PackageReference Include="FluentAssertions" Version="6.7.0" />
+    <PackageReference Include="AutoFixture" Version="4.17.0" />
+    <PackageReference Include="AutoFixture.AutoMoq" Version="4.17.0" />
+    <PackageReference Include="AutoFixture.NUnit3" Version="4.17.0" />
+    <PackageReference Include="AutoFixture.SeedExtensions" Version="4.17.0" />
+    <PackageReference Include="FluentAssertions" Version="6.7.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="Nito.AsyncEx" Version="5.1.2" />
@@ -26,6 +26,10 @@
     <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
     <PackageReference Include="SixLabors.ImageSharp" Version="2.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MyCore\MyCore.csproj" />
   </ItemGroup>
 
   <ItemGroup>
