--- a/TestingPrograms/TestingPrograms.csproj
+++ b/TestingPrograms/TestingPrograms.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="NUnit" Version="4.1.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.4" />
+    <PackageReference Include="Throw" Version="1.4.0" />
   </ItemGroup>
 
   <ItemGroup>
